SERVER-20041 check RecordCursor::restore() result in test